--- a/src/MenuInicio.form
+++ b/src/MenuInicio.form
@@ -83,7 +83,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="Imagen1.png"/>
+          <icon value="icono/Imagen1.png"/>
           <text value=""/>
         </properties>
       </component>
