--- a/src/Forms/adingrCan.form
+++ b/src/Forms/adingrCan.form
@@ -36,6 +36,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Número de Cancha:"/>
         </properties>
       </component>
@@ -54,6 +55,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Nombre:"/>
         </properties>
       </component>
@@ -72,6 +74,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Dirección:"/>
         </properties>
       </component>
@@ -97,6 +100,7 @@
           <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <labelFor value="f649d"/>
           <text value="Número de jugadores:"/>
         </properties>
@@ -106,7 +110,9 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-9064132"/>
           <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Registrar"/>
         </properties>
       </component>
@@ -135,7 +141,9 @@
           <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1744027"/>
           <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Regresar"/>
         </properties>
       </component>
