--- a/src/Forms/gestionJugadores.form
+++ b/src/Forms/gestionJugadores.form
@@ -1,13 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Forms.gestionJugadores">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="Panel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-14473879"/>
+    </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <component id="aa59c" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <font name="Bernard MT Condensed" size="24"/>
+          <foreground color="-1"/>
+          <text value="Gestión de Usuarios"/>
+        </properties>
+      </component>
+      <component id="a36a4" class="javax.swing.JButton" binding="inserBtn">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9064132"/>
+          <foreground color="-1"/>
+          <text value="Insertar"/>
+        </properties>
+      </component>
+      <component id="179ae" class="javax.swing.JButton" binding="editBtn">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9064132"/>
+          <foreground color="-1"/>
+          <text value="Editar"/>
+        </properties>
+      </component>
+      <component id="ca591" class="javax.swing.JButton" binding="elimBtn">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9064132"/>
+          <foreground color="-1"/>
+          <text value="Eliminar"/>
+        </properties>
+      </component>
+      <component id="44174" class="javax.swing.JButton" binding="regBtn">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1744027"/>
+          <foreground color="-1"/>
+          <text value="Regresar"/>
+        </properties>
+      </component>
+      <scrollpane id="4fcbc">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="60d26" class="javax.swing.JTable" binding="tabl">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="a5255" class="javax.swing.JLabel" binding="ver">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-1769469"/>
+          <text value=""/>
+        </properties>
+      </component>
+    </children>
   </grid>
 </form>
