--- a/src/Forms/gestionReservas.form
+++ b/src/Forms/gestionReservas.form
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Forms.gestionReservas">
-  <grid id="27dc6" binding="pane" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="pane" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-9075457"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="7d704" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <font name="Bernard MT Condensed" size="22"/>
+          <foreground color="-394241"/>
+          <text value="Gestión de Reservas"/>
         </properties>
       </component>
       <scrollpane id="d845f">
@@ -23,42 +27,59 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="ac2b0" class="javax.swing.JTable" binding="table1" default-binding="true">
+          <component id="ac2b0" class="javax.swing.JTable" binding="tabl">
             <constraints/>
             <properties/>
           </component>
         </children>
       </scrollpane>
-      <component id="eea" class="javax.swing.JButton" binding="realizarUnaNuevaReservaButton" default-binding="true">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Realizar una nueva reserva"/>
-        </properties>
-      </component>
-      <component id="4b7e0" class="javax.swing.JButton" binding="editarButton" default-binding="true">
+      <component id="eea" class="javax.swing.JButton" binding="resBtn">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Editar"/>
+          <background color="-9847178"/>
+          <foreground color="-1"/>
+          <text value="Realizar una Nueva Reserva"/>
         </properties>
       </component>
-      <component id="8d349" class="javax.swing.JButton" binding="eliminarButton" default-binding="true">
+      <component id="4b7e0" class="javax.swing.JButton" binding="editBtn">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Eliminar"/>
+          <background color="-9847178"/>
+          <foreground color="-1"/>
+          <text value="Editar"/>
         </properties>
       </component>
-      <component id="496a6" class="javax.swing.JButton" binding="regButton">
+      <component id="8d349" class="javax.swing.JButton" binding="elimBtn">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-9847178"/>
+          <foreground color="-1"/>
+          <text value="Eliminar"/>
+        </properties>
+      </component>
+      <component id="496a6" class="javax.swing.JButton" binding="regBtn">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-33405"/>
+          <foreground color="-1"/>
           <text value="Regresar al Menú Administrador"/>
+        </properties>
+      </component>
+      <component id="29134" class="javax.swing.JLabel" binding="ver">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-65536"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
